fixes/podspectest-autoSATTrue.yaml
apiVersion: v1
kind: Pod
metadata:
  name: servicetest
spec:
  automountServiceAccountToken: true
  containers:
  - name: nginx
    image: nginx:1.21.4
    ports:
    - containerPort: 80
