fixes/eks-sample-app-deny-egress-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: eks-sample-app-deny-all
    namespace: eks-sample-app
spec:
  podSelector: {}
  policyTypes:
      - Ingress
      - Egress
