fixes/eks-sample-test-deny-egress-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: eks-sample-test-deny-all
    namespace: eks-sample-test
spec:
  podSelector: {}
  policyTypes:
      - Ingress
      - Egress
