fixes/kube-system-deny-egress-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: kube-system-deny-all
    namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
      - Ingress
      - Egress
